--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,12 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: '@andreasonny83'
 email: andreasonny83@gmail.com
+username: andreasonny83
 description: > # this means to ignore newlines until "baseurl:"
   Articles on JavaScript, Angular, Google Material Design Lite
   and more
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andreasonny83.github.io/" # the base hostname & protocol for your site
-twitter_username: andreasonny83
-github_username:  andreasonny83
 
 # Build settings
 markdown: kramdown
