--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,9 @@ description: > # this means to ignore newlines until "baseurl:"
   and more
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andreasonny83.github.io/" # the base hostname & protocol for your site
+custom_js:
+  - responsive-navbar
+  - main
 
 # Build settings
 markdown: kramdown
